--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <bs-header></bs-header>
 
 <div class="max-w-screen-md mx-auto px-4 flex flex-col gap-16 py-10">
+<!--  placeholder for dynamic component rendering-->
   <router-outlet></router-outlet>
 </div>
 
