--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,8 @@
     <h2>Fächer</h2>
     <h3>Was wir anbieten</h3>
     <p>Wir bieten Nachhilfe für viele verschiedene Fächer, sowohl für die Schule als auch für die Universität.
-      Ob Mathe, Englisch, Physik oder Informatik, bei uns findest du Unterstützung, die genau zu deinem Lernstoff passt. </p>
+      Ob Mathe, Englisch, Physik oder Informatik, bei uns findest du Unterstützung, die genau zu deinem Lernstoff
+      passt. </p>
     <div class="subjects-button">
       <a routerLink="/subjects" class="btn btn-primary">Zu allen Fächern</a>
     </div>
@@ -20,7 +21,7 @@
       Leidenschaft Wissen vermitteln. Sie hören zu, erklären verständlich und unterstützen dich genau da,
       wo du Hilfe brauchst.
     </p>
-       <div class="teachers-button">
+    <div class="teachers-button">
       <a routerLink="/teachers" class="btn btn-primary">Zu allen Nachhilfegebenden</a>
     </div>
   </section>
@@ -30,12 +31,14 @@
     <h3>Diese Nachhilfeangebote bieten wir an</h3>
 
     <p>Unsere Nachhilfeangebote umfassen viele Fächer und Lernstufen, bestimmt auch das richtige für dich.</p>
-    <p>Die Nachhilfestunden dauern in der Regel 60 Minuten. Natürlich kannst du mit deiner Nachhilfelehrkraft individuell andere Zeiten vereinbaren.</p>
-    <p>Der Unterricht findet online statt. Den Link zur Sitzung erhältst du zusammen mit dem Kalendereintrag per E-Mail.</p>
+    <p>Die Nachhilfestunden dauern in der Regel 60 Minuten. Natürlich kannst du mit deiner Nachhilfelehrkraft
+      individuell andere Zeiten vereinbaren.</p>
+    <p>Der Unterricht findet online statt. Den Link zur Sitzung erhältst du zusammen mit dem Kalendereintrag per
+      E-Mail.</p>
     <p>Für eine ausführliche Übersicht schau dir alle Angebote auf der Angebotsseite an.</p>
     <div class="offers-button">
-        <a routerLink="/offers" class="btn btn-primary">Zu allen Angeboten</a>
-      </div>
+      <a routerLink="/offers" class="btn btn-primary">Zu allen Angeboten</a>
+    </div>
   </section>
 
 </main>
